# Parker

./: .editorconfig  .gitignore  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
Backend/: CMakeLists.txt  database_constants.h  log.hpp  main.cpp
Backend/FCM/: app.js  package-lock.json  package.json
Backend/helpers/: detector.py
app/: build.gradle
app/src/androidTest/java/com/beesechurgers/parker/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/beesechurgers/parker/: App.java  CarNumberActivity.kt  HistoryActivity.java  HistoryActivity.kt  LoginActivity.java  MainActivity.java  MainActivity.kt  PaymentActivity.java  PaymentActivity.kt  ScannerActivity.kt  SignUp.java  SignUpActivity.java  SplashActivity.java  (+1 more)
app/src/main/res/drawable/: ic_baseline_payment_24.xml  ic_outline_account_circle_24.xml  ic_outline_logout_24.xml  ic_outline_qr_code_scanner_24.xml  ic_outline_settings_24.xml  ic_round_info_24.xml  ic_round_local_parking_24.xml  splash.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_car_number.xml  activity_history.xml  activity_login.xml  activity_main.xml  activity_payment.xml  activity_scanner.xml  activity_sign_up.xml  activity_splash.xml  payment_history_item_layout.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+8 files in other folders)
